<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.asrul.skripsi.ui.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_auth_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLoginGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Create an account."
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/imgLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgLogo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRegisterForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/imgLogo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Register"
                    android:textColor="@color/color_primary"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Username"
                        android:drawablePadding="12dp"
                        android:drawableStart="@drawable/ic_form_profile"
                        android:inputType="textPersonName"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:drawablePadding="12dp"
                        android:drawableStart="@drawable/ic_form_message"
                        android:inputType="textEmailAddress"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomFormPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp"
                        android:drawablePadding="12dp"
                        android:drawableStart="@drawable/ic_form_lock"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPassword2"
                    style="@style/CustomFormPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Verify Password"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp"
                        android:drawablePadding="12dp"
                        android:drawableStart="@drawable/ic_form_lock"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRegister"
            style="@style/CustomButtonSolid"
            android:layout_marginTop="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="12dp"
            android:text="Register"
            android:textColor="@color/color_primary"
            app:layout_constraintEnd_toEndOf="@id/cvRegisterForm"
            app:layout_constraintStart_toStartOf="@id/cvRegisterForm"
            app:layout_constraintTop_toBottomOf="@+id/cvRegisterForm"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/btnRegister"
            app:layout_constraintBottom_toBottomOf="@id/btnRegister"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Already have an account? Login"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/btnRegister"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>